crates/data_flow/re_importer/src/importer_mcap/tests/snapshots/foxglove_voxel_grid.snap
---
source: crates/data_flow/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/data_flow/re_importer/src/importer_mcap/tests/assets/foxglove_voxel_grid.mcap
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                               │
│ * entity_path: /voxel_grid                                                                                                                                                                                                              │
│ * id: [**REDACTED**]                                                                                                                                                                                                                    │
│ * version: [**REDACTED**]                                                                                                                                                                                                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┬──────────────────────┐ │
│ │ RowId                ┆ message_log_time     ┆ message_publish_time ┆ timestamp            ┆ CoordinateFrame:fram ┆ VoxelGridMap:colors  ┆ VoxelGridMap:quatern ┆ VoxelGridMap:transla ┆ VoxelGridMap:voxel_i ┆ VoxelGridMap:voxel_s │ │
│ │ ---                  ┆ ---                  ┆ ---                  ┆ ---                  ┆ e                    ┆ ---                  ┆ ion                  ┆ tion                 ┆ ndices               ┆ ize                  │ │
│ │ type: non-null       ┆ type: Timestamp(ns)  ┆ type: Timestamp(ns)  ┆ type: Timestamp(ns)  ┆ ---                  ┆ type: List(UInt32)   ┆ ---                  ┆ ---                  ┆ ---                  ┆ ---                  │ │
│ │ FixedSizeBinary(16)  ┆ index_name:          ┆ index_name:          ┆ index_name:          ┆ type: List(Utf8)     ┆ archetype:           ┆ type:                ┆ type:                ┆ type:                ┆ type:                │ │
│ │ ARROW:extension:meta ┆ message_log_time     ┆ message_publish_time ┆ timestamp            ┆ archetype:           ┆ VoxelGridMap         ┆ List(FixedSizeList(4 ┆ List(FixedSizeList(3 ┆ List(FixedSizeList(3 ┆ List(FixedSizeList(3 │ │
│ │ data:                ┆ is_sorted: true      ┆ is_sorted: true      ┆ is_sorted: true      ┆ CoordinateFrame      ┆ component:           ┆ x non-null Float32)) ┆ x non-null Float32)) ┆ x non-null Int32))   ┆ x non-null Float32)) │ │
│ │ {"namespace":"row"}  ┆ kind: index          ┆ kind: index          ┆ kind: index          ┆ component: Coordinat ┆ VoxelGridMap:colors  ┆ archetype:           ┆ archetype:           ┆ archetype:           ┆ archetype:           │ │
│ │ ARROW:extension:name ┆                      ┆                      ┆                      ┆ eFrame:frame         ┆ component_type:      ┆ VoxelGridMap         ┆ VoxelGridMap         ┆ VoxelGridMap         ┆ VoxelGridMap         │ │
│ │ : TUID               ┆                      ┆                      ┆                      ┆ component_type:      ┆ Color                ┆ component: VoxelGrid ┆ component: VoxelGrid ┆ component: VoxelGrid ┆ component: VoxelGrid │ │
│ │ is_sorted: true      ┆                      ┆                      ┆                      ┆ TransformFrameId     ┆ kind: data           ┆ Map:quaternion       ┆ Map:translation      ┆ Map:voxel_indices    ┆ Map:voxel_size       │ │
│ │ kind: control        ┆                      ┆                      ┆                      ┆ kind: data           ┆                      ┆ component_type:      ┆ component_type:      ┆ component_type:      ┆ component_type:      │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆                      ┆ RotationQuat         ┆ Translation3D        ┆ VoxelIndex           ┆ VoxelSize            │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆                      ┆ kind: data           ┆ kind: data           ┆ kind: data           ┆ kind: data           │ │
│ ╞══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╪══════════════════════╡ │
│ │ row_[**REDACTED**]   ┆ 2026-06-18T10:14:34. ┆ 2026-06-18T10:14:34. ┆ 2026-06-18T10:14:34. ┆ [world]              ┆ [4278190260,         ┆ [[0.0, 0.0,          ┆ [[1.0, 0.5, 0.25]]   ┆ [[0, 0, 0], [1, 0,   ┆ [[0.25, 0.5, 0.75]]  │ │
│ │                      ┆ 219693056            ┆ 219693056            ┆ 219693056            ┆                      ┆ 16711860, 65460,     ┆ 0.38268343,          ┆                      ┆ 0], [0, 1, 0], [1,   ┆                      │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆ 4294901940,          ┆ 0.9238795]]          ┆                      ┆ 1, 0], [0, 0, 1],    ┆                      │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆ 4278255540,          ┆                      ┆                      ┆ [1, 0, 1], [0, 1,    ┆                      │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆ 16777140,            ┆                      ┆                      ┆ 1], [1, 1, 1]]       ┆                      │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆ 4294967220,          ┆                      ┆                      ┆                      ┆                      │ │
│ │                      ┆                      ┆                      ┆                      ┆                      ┆ 4286578868]          ┆                      ┆                      ┆                      ┆                      │ │
│ └──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┴──────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
