crates/data_flow/re_importer/src/importer_mcap/tests/snapshots/ros_camera_info.snap
---
source: crates/data_flow/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/data_flow/re_importer/src/importer_mcap/tests/assets/ros_camera_info.mcap
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                         │
│ * entity_path: /camera/camera_info                                                                                                                                                                                                │
│ * id: [**REDACTED**]                                                                                                                                                                                                              │
│ * version: [**REDACTED**]                                                                                                                                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┐ │
│ │ RowId                     ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ Pinhole:child_frame       ┆ Pinhole:image_from_camera ┆ Pinhole:parent_frame      ┆ Pinhole:resolution        │ │
│ │ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       │ │
│ │ type: non-null            ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: List(Utf8)          ┆ type:                     ┆ type: List(Utf8)          ┆ type:                     │ │
│ │ FixedSizeBinary(16)       ┆ index_name:               ┆ index_name:               ┆ index_name:               ┆ archetype: Pinhole        ┆ List(FixedSizeList(9 x    ┆ archetype: Pinhole        ┆ List(FixedSizeList(2 x    │ │
│ │ ARROW:extension:metadata: ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ component:                ┆ non-null Float32))        ┆ component:                ┆ non-null Float32))        │ │
│ │ {"namespace":"row"}       ┆ is_sorted: true           ┆ is_sorted: true           ┆ is_sorted: true           ┆ Pinhole:child_frame       ┆ archetype: Pinhole        ┆ Pinhole:parent_frame      ┆ archetype: Pinhole        │ │
│ │ ARROW:extension:name:     ┆ kind: index               ┆ kind: index               ┆ kind: index               ┆ component_type:           ┆ component:                ┆ component_type:           ┆ component:                │ │
│ │ TUID                      ┆                           ┆                           ┆                           ┆ TransformFrameId          ┆ Pinhole:image_from_camera ┆ TransformFrameId          ┆ Pinhole:resolution        │ │
│ │ is_sorted: true           ┆                           ┆                           ┆                           ┆ kind: data                ┆ component_type:           ┆ kind: data                ┆ component_type:           │ │
│ │ kind: control             ┆                           ┆                           ┆                           ┆                           ┆ PinholeProjection         ┆                           ┆ Resolution                │ │
│ │                           ┆                           ┆                           ┆                           ┆                           ┆ kind: data                ┆                           ┆ kind: data                │ │
│ ╞═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╡ │
│ │ row_[**REDACTED**]        ┆ 1970-01-01T00:00:00       ┆ 1970-01-01T00:00:00       ┆ 1970-01-01T00:00:00       ┆ [camera_optical_frame_ima ┆ [[525.0, 0.0, 0.0, 0.0,   ┆ [camera_optical_frame]    ┆ [[640.0, 480.0]]          │ │
│ │                           ┆                           ┆                           ┆                           ┆ ge_plane]                 ┆ 525.0, 0.0, 319.5, 239.5, ┆                           ┆                           │ │
│ │                           ┆                           ┆                           ┆                           ┆                           ┆ 1.0]]                     ┆                           ┆                           │ │
│ └───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
