crates/data_flow/re_importer/src/importer_mcap/tests/snapshots/ros_fluid_pressure.snap
---
source: crates/data_flow/re_importer/src/importer_mcap/tests/util.rs
expression: snapshot
input_file: crates/data_flow/re_importer/src/importer_mcap/tests/assets/ros_fluid_pressure.mcap
---
┌───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                         │
│ * entity_path: /env/pressure                                                                                                                                                                                                      │
│ * id: [**REDACTED**]                                                                                                                                                                                                              │
│ * version: [**REDACTED**]                                                                                                                                                                                                         │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┬───────────────────────────┐ │
│ │ RowId                     ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ CoordinateFrame:frame     ┆ Measurements:units        ┆ Measurements:values       ┆ Measurements:variances    │ │
│ │ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       ┆ ---                       │ │
│ │ type: non-null            ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: Timestamp(ns)       ┆ type: List(Utf8)          ┆ type: List(Utf8)          ┆ type: List(Float64)       ┆ type: List(Float64)       │ │
│ │ FixedSizeBinary(16)       ┆ index_name:               ┆ index_name:               ┆ index_name:               ┆ archetype:                ┆ archetype: Measurements   ┆ archetype: Measurements   ┆ archetype: Measurements   │ │
│ │ ARROW:extension:metadata: ┆ message_log_time          ┆ message_publish_time      ┆ ros2_timestamp            ┆ CoordinateFrame           ┆ component:                ┆ component:                ┆ component:                │ │
│ │ {"namespace":"row"}       ┆ is_sorted: true           ┆ is_sorted: true           ┆ is_sorted: true           ┆ component:                ┆ Measurements:units        ┆ Measurements:values       ┆ Measurements:variances    │ │
│ │ ARROW:extension:name:     ┆ kind: index               ┆ kind: index               ┆ kind: index               ┆ CoordinateFrame:frame     ┆ component_type: Unit      ┆ component_type: Scalar    ┆ component_type: Variance  │ │
│ │ TUID                      ┆                           ┆                           ┆                           ┆ component_type:           ┆ kind: data                ┆ kind: data                ┆ kind: data                │ │
│ │ is_sorted: true           ┆                           ┆                           ┆                           ┆ TransformFrameId          ┆                           ┆                           ┆                           │ │
│ │ kind: control             ┆                           ┆                           ┆                           ┆ kind: data                ┆                           ┆                           ┆                           │ │
│ ╞═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╪═══════════════════════════╡ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:51.95785 ┆ 2026-09-02T12:08:51.95785 ┆ 2026-09-02T12:08:51.95785 ┆ [barometer]               ┆ [Pa]                      ┆ [101325.0]                ┆ [0.0]                     │ │
│ │                           ┆ 4                         ┆ 4                         ┆ 4                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.05785 ┆ 2026-09-02T12:08:52.05785 ┆ 2026-09-02T12:08:52.05785 ┆ [barometer]               ┆ [Pa]                      ┆ [101310.0]                ┆ [400.0]                   │ │
│ │                           ┆ 4                         ┆ 4                         ┆ 4                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.15785 ┆ 2026-09-02T12:08:52.15785 ┆ 2026-09-02T12:08:52.15785 ┆ [barometer]               ┆ [Pa]                      ┆ [101298.0]                ┆ [200.0]                   │ │
│ │                           ┆ 4                         ┆ 4                         ┆ 4                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.25785 ┆ 2026-09-02T12:08:52.25785 ┆ 2026-09-02T12:08:52.25785 ┆ [barometer]               ┆ [Pa]                      ┆ [101288.0]                ┆ [100.0]                   │ │
│ │                           ┆ 4                         ┆ 4                         ┆ 4                         ┆                           ┆                           ┆                           ┆                           │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]        ┆ 2026-09-02T12:08:52.35785 ┆ 2026-09-02T12:08:52.35785 ┆ 2026-09-02T12:08:52.35785 ┆ [barometer]               ┆ [Pa]                      ┆ [101280.0]                ┆ [100.0]                   │ │
│ │                           ┆ 4                         ┆ 4                         ┆ 4                         ┆                           ┆                           ┆                           ┆                           │ │
│ └───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┴───────────────────────────┘ │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
